fix z-index

--- a/css/main.less
+++ b/css/main.less
@@ -54,7 +54,8 @@ header img {
     right: 0;
     margin: auto;
     height: 50%;
-    width: 70%; 
+    width: 70%;
+    z-index: 2;
 }
 
 .content h1 {
@@ -79,6 +80,7 @@ footer {
     width: 100%;
     padding: 0 20px;
     .box-sizing(border-box);
+    z-index: 2;
 }
 
 /* responsive */
